fix: dark mode color

--- a/src/theme/ConnectorGenerator/styles.module.css
+++ b/src/theme/ConnectorGenerator/styles.module.css
@@ -7,7 +7,6 @@ label.labelText {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #363a40;
   margin-bottom: 0.5rem;
 }
 
@@ -15,7 +14,6 @@ label.radioLabel {
   font-weight: 700;
   font-size: 14px;
   line-height: 22px;
-  color: #363a40;
   padding-left: 1rem;
 }
 
@@ -23,7 +21,6 @@ h5.header {
   font-weight: 500;
   font-size: 21px;
   line-height: 29px;
-  color: #484964;
   margin-top: 1rem;
 }
 
